--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Stack-overflow-lite MERN-Stack version ",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js --exec babel-node -- ",
     "test": " npx jasmine",
-    "client":"npm start --prefix client",
     "server": "nodemon server.js --exec babel-node -- ",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -15,7 +15,6 @@
     "@babel/runtime": "^7.10.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -25,7 +24,7 @@
     "validator": "^13.0.0"
   },
   "engines": {
-    "node":"12.14.0"
+    "node": "12.14.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
@@ -34,6 +33,7 @@
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-env": "^7.10.3",
     "@babel/register": "^7.10.3",
+    "concurrently": "^5.3.0",
     "jasmine": "^3.5.0",
     "nodemon": "^2.0.4",
     "passport-mock-strategy": "^2.0.0",
