--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js --exec babel-node -- ",
     "test": " npx jasmine",
     "server": "nodemon server.js --exec babel-node -- ",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "Majeed Shuaib",
   "license": "ISC",
