--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "Stack-overflow-lite MERN-Stack version ",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js ",
     "test": " npx jasmine",
-    "server": "nodemon server.js --exec babel-node -- ",
+    "server": "nodemon server.js ",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "Majeed Shuaib",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.10.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -28,12 +27,6 @@
     "node": "12.14.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.3",
-    "@babel/core": "^7.10.3",
-    "@babel/node": "^7.10.3",
-    "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/register": "^7.10.3",
     "concurrently": "^5.3.0",
     "jasmine": "^3.5.0",
     "nodemon": "^2.0.4",
