--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "passport-mock-strategy": "^2.0.0",
+    "save": "^2.4.0",
     "validator": "^13.0.0"
   },
   "engines": {
@@ -30,7 +32,6 @@
     "concurrently": "^5.3.0",
     "jasmine": "^3.5.0",
     "nodemon": "^2.0.4",
-    "passport-mock-strategy": "^2.0.0",
     "supertest": "^4.0.2"
   }
 }
