--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # ignore packages installed by npm
-node_modules
+/node_modules
+npm-debug.log
+.DS_Store
+/*.env
 
 #ignore vscode generated files
 .vscode
