--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js ",
     "test": " npx jasmine",
     "server": "nodemon server.js ",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm start --prefix client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "Majeed Shuaib",
@@ -22,6 +22,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-mock-strategy": "^2.0.0",
+    "react-router-dom": "^5.2.0",
     "save": "^2.4.0",
     "validator": "^13.0.0"
   },
