--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js ",
     "test": " npx jasmine",
     "server": "nodemon server.js ",
-    "dev": "concurrently \"npm run server\" \"npm start --prefix client\"",
+    "dev": "cross-env NODE_ENV=test concurrently \"npm run server\" \"npm start --prefix client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "Majeed Shuaib",
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
