--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "author": "Majeed Shuaib",
   "license": "ISC",
+  "homepage": "https://gitlab.com/jidsfotech/StackOverflowLite-MERN-Stack",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
