--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "Majeed Shuaib",
   "license": "ISC",
-  "homepage": "https://gitlab.com/jidsfotech/StackOverflowLite-MERN-Stack",
+  "homepage": "https://www.codesmartly.codes/",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -25,6 +25,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-mock-strategy": "^2.0.0",
+    "react-icon": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "save": "^2.4.0",
     "validator": "^13.0.0"
