--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-joi-validate": "^3.0.1",
     "http-status": "^1.5.0",
     "is-empty": "^1.2.0",
+    "joi": "^17.4.0",
+    "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
