--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Stack-overflow-lite MERN-Stack version ",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js && npm start --prefix client",
+    "start": "node server.js",
     "test": " npx jasmine",
-    "server": "nodemon server.js ",
+    "server": "nodemon server.js",
     "dev": "cross-env NODE_ENV=test concurrently \"npm run server\" \"npm start --prefix client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
