--- a/package.json
+++ b/package.json
@@ -13,26 +13,28 @@
   "author": "Majeed Shuaib",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cross-env": "^7.0.3",
+    "bcryptjs": "2.4.3",
+    "body-parser": "1.19.0",
+    "cross-env": "7.0.3",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-joi-validate": "^3.0.1",
+    "express": "4.17.1",
+    "express-joi-validate": "3.0.1",
     "http-status": "^1.5.0",
-    "is-empty": "^1.2.0",
+    "is-empty": "1.2.0",
     "joi": "^17.4.0",
-    "joi-objectid": "^3.0.1",
-    "jsonwebtoken": "^8.5.1",
+    "joi-objectid": "3.0.1",
+    "jsonwebtoken": "8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.10.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
+    "mongoose": "5.10.0",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0",
     "passport-mock-strategy": "^2.0.0",
     "react-icon": "^1.0.0",
     "react-router-dom": "^5.2.0",
-    "save": "^2.4.0",
-    "validator": "^13.0.0"
+    "save": "2.4.0",
+    "socket.io": "^4.4.1",
+    "speedtest-net": "^2.2.0",
+    "validator": "13.0.0"
   },
   "engines": {
     "node": "12.14.0"
