--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "start:dev": "react-scripts --openssl-legacy-provider start",
+    "build:dev": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
