--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": " npx jasmine",
     "server": "nodemon server.js",
     "start:dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider NODE_ENV=test concurrently \"npm run server\" \"npm start --prefix client\"",
-    "build": "cd client && npm install && npm run build"
+    "build": "npm install && cd client && npm install && npm run build"
   },
   "author": "Majeed Shuaib",
   "license": "ISC",
