--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 npm-debug.log
 .DS_Store
 /*.env
-
+.gitignore
+    node_modules
 #ignore vscode generated files
 .vscode
-
 .env 
+yarn.lock
+
+/client/node_modules/
