--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,10 +1,10 @@
 # ignore packages installed by npm
-/node_modules
+node_modules/
 npm-debug.log
 .DS_Store
 /*.env
 
-#ignore vscode generated files
+# #ignore vscode generated files
 .vscode
 
-.env 
+env 
