--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "start": "node server.js",
     "test": " npx jasmine",
     "server": "nodemon server.js",
-    "start:dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider NODE_ENV=test concurrently \"npm run server\" \"npm start --prefix client\"",
+    "start:dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider NODE_ENV=test concurrently \"npm run server\" \"npm run start:dev --prefix client\"",
     "build": "npm install && cd client && npm install && npm run build"
   },
   "author": "Majeed Shuaib",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "2.4.3",
+    "bcryptjs":"2.4.3",
     "body-parser": "1.19.0",
     "cross-env": "7.0.3",
     "dotenv": "8.6.0",
     "express": "4.17.1",
     "express-joi-validate": "3.0.1",
     "http-status": "1.5.0",
-    "is-empty": "^1.2.0",
+    "is-empty": "1.2.0",
     "joi": "17.4.0",
     "joi-objectid": "3.0.1",
     "jsonwebtoken": "8.5.1",
@@ -37,7 +37,7 @@
     "node": "12.14.0"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
+    "concurrently": "5.3.0",
     "jasmine": "3.5.0",
     "nodemon": "^2.0.4",
     "supertest": "4.0.2"
